modify to adapt to OOP project database schema

--- a/templates/document.html
+++ b/templates/document.html
@@ -8,6 +8,7 @@
 <div class="content">
     <h2>{{ title }}</h2>
     {% for paragraph in paragraphs %}
+        <p>{{ url }}</p>
         <p>{{ paragraph }}</p>
     {% endfor %}
     <button onclick="history.back()">Go Back</button>
