--- a/templates/index.html
+++ b/templates/index.html
@@ -8,14 +8,14 @@
 <div class="content">
     <h1 style="text-align: center">Search Engine</h1>
 
-    <a href="/">Start Page</a>
+    <p><a href="{{data_source}}">Database</a></p>
+    <p><a href="/">Start Page</a></p>
 
     <div class="form-container">
         <form action="{{ url_for('handle_search') }}" method="POST" style="display: inline;">
             <input type="text" name="query" id="query" placeholder="Enter your search term">
             <input type="submit" value="Search">
         </form>
-        
         <a href="/reindex"><button>Redirect to /reindex</button></a>
     </div>
 
