Display total results

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             <input type="text" name="query" id="query" placeholder="Enter your search term">
             <input type="submit" value="Search">
         </form>
-        <a href="/reindex"><button>Redirect to /reindex</button></a>
+        <a href="/reindex"><button>Reload data</button></a>
     </div>
 
     {% if results %}
