--- a/templates/document.html
+++ b/templates/document.html
@@ -7,8 +7,8 @@
 {% block body %}
 <div class="content">
     <h2>{{ title }}</h2>
+    <p>Article link: <a href="{{ url }}" >link</a> </p>
     {% for paragraph in paragraphs %}
-        <p>{{ url }}</p>
         <p>{{ paragraph }}</p>
     {% endfor %}
     <button onclick="history.back()">Go Back</button>
