--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
     <div class="form-container">
         <form action="{{ url_for('handle_search') }}" method="POST" style="display: inline;">
-            <input type="text" name="query" id="query" placeholder="Enter your search term">
+            <input type="text" name="query" id="query" value = "{{query}}" placeholder="Enter your search term">
             <input type="submit" value="Search">
         </form>
         <a href="/reindex"><button>Reload data</button></a>
@@ -55,7 +55,7 @@
                 {{ from_ + loop.index }}. <b><a href="{{ url_for('get_document', id=result._id) }}">{{ result._source.title }}</a></b>
                 <p>{{ result._source.summary }}</p>
                 <small>
-                    Category: {{ result._source.category }}.
+                    Tags: {% for tag in result._source.tags %} {{ tag }}{% endfor %}.
                     Source: {{ result._source.website_source }}.
                     Author: {{ result._source.author }}.
                     {% if result._score %}<i>(Score: {{ result._score }})</i>{% endif %}
